# raptor_msgs

./: CMakeLists.txt  readme.md
cpp_msgs/: CMakeLists.txt
cpp_msgs/msgs/: Float_msg.h  Header_msg.h  RotGripCmd_msg.h  UserCmd_msg.h  Vector3f_msg.h
cpp_msgs/quadcopter_msgs/: CMakeLists.txt  GripCmd_msg.h  GripperCmd_msg.h  GripperSensor_msg.h  MocapMarker_msg.h  MocapSegments_msg.h  Mocap_msg.h  PosCmd_msg.h  QuadAction_msg.h  QuadFeedback_msg.h  QuadPosCmd_msg.h  QuadStatus_msg.h  QuadVelCmd_msg.h  RotGripCmd_msg.h  UserCmd_msg.h  VelCmd_msg.h
cpp_msgs/standard_msgs/: Bool_msg.h  CMakeLists.txt  Euler_angle_msg.h  Float_msg.h  Header_msg.h  Int_msg.h  Long_msg.h  Position_msg.h  Quaternion_msg.h  String_msg.h  Vector3f_msg.h  Vector3i_msg.h  Velocity_msg.h
dds_msgs/: Bool_msg.idl  Euler_angle_msg.idl  Float_msg.idl  GripCmd_msg.idl  GripperSensor_msg.idl  Header_msg.idl  Int_msg.idl  Long_msg.idl  MocapMarker_msg.idl  MocapSegments_msg.idl  Mocap_msg.idl  PosCmd_msg.idl  Position_msg.idl  QuadAction_msg.idl  QuadFeedback_msg.idl  QuadPosCmd_msg.idl  QuadStatus_msg.idl  QuadVelCmd_msg.idl  Quaternion_msg.idl  RotGripCmd_msg.idl  String_msg.idl  UserCmd_msg.idl  Vector3f_msg.idl  Vector3i_msg.idl  VelCmd_msg.idl  Velocity_msg.idl
